--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
   .card{background:var(--card);border:1px solid var(--line);border-radius:14px;padding:18px}
   h1{margin:0 0 6px;font-size:1.35rem}
   .muted{color:var(--muted)}
-  .q{border:1px solid var(--line);border-radius:12px;padding:12px;background:#0b1220}
+  .grid-info{display:grid;grid-template-columns:1fr 1fr 1fr;gap:10px;margin:10px 0 6px}
+  @media(max-width:720px){.grid-info{grid-template-columns:1fr}}
+  .info-item{background:#0b1220;border:1px solid var(--line);border-radius:10px;padding:10px}
+  .info-item b{display:block;margin-bottom:4px;color:#cbd5e1}
+  .q{border:1px solid var(--line);border-radius:12px;padding:12px;background:#0b1220;margin-top:10px}
   .q h3{margin:0 0 8px;font-size:1rem}
   .opts{display:flex;flex-wrap:wrap;gap:10px}
   .opt{display:flex;align-items:center;gap:6px;padding:8px 10px;border:1px solid var(--line);border-radius:10px}
@@ -22,15 +26,21 @@
   .msg{margin:10px 0;padding:10px;border-radius:8px}
   .okbox{background:#052e1a;border:1px solid #114d2a;color:#b3f7c1}
   .errbox{background:#3b0d0d;border:1px solid #5b1919;color:#ffd0d0}
+  .warnbox{background:#3a2903;border:1px solid #5c4307;color:#ffe6b0}
 </style>
 </head>
 <body>
 <div class="wrap">
   <div class="card">
     <h1>BAI – Inventário de Ansiedade de Beck</h1>
-    <p class="muted">Marque o quanto cada sintoma lhe incomodou na <strong>última semana</strong>, incluindo hoje.</p>
+    <p class="muted" id="intro">Marque o quanto cada sintoma lhe incomodou na <strong>última semana</strong>, incluindo hoje.</p>
 
-    <form id="form" style="margin-top:14px;">
+    <!-- Dados do paciente (via token) -->
+    <div id="info" class="grid-info" style="display:none"></div>
+
+    <div id="alert" class="msg" style="display:none"></div>
+
+    <form id="form" style="margin-top:14px; display:none;">
       <div id="qs"></div>
       <div style="margin-top:14px">
         <button id="btnSubmit" class="btn ok" type="submit">Enviar respostas</button>
@@ -41,16 +51,21 @@
 </div>
 
 <script>
-// ======== CONFIG ========
+/* ===== CONFIG ===== */
 const SHEETDB_BASE = "https://sheetdb.io/api/v1/8pmdh33s9fvy8";
-const SHEETS = { PATIENTS:"Patients", TOKENS:"LinkTokens", SCORES:"Scores_BAI" };
+const SHEETS = { PATIENTS:"Patients", SCORES:"Scores_BAI", TOKENS:"LinkTokens" };
 const CODE = "BAI";
-const REDIRECT_URL = "https://integradaneuropsicologia.github.io/formularios/";
+const PORTAL_URL = "https://integradaneuropsicologia.github.io/formularios/";
 
-// ======== HELPERS ========
+/* ===== HELPERS ===== */
 const $ = s => document.querySelector(s);
+const onlyDigits = s => (s||"").replace(/\D+/g,"");
 const qs = k => new URLSearchParams(location.search).get(k) || "";
-function setMsg(text, ok=true){ const b=$("#msg"); b.style.display="block"; b.className="msg "+(ok?"okbox":"errbox"); b.textContent=text; }
+function setBox(el, text, type="ok"){
+  el.textContent = text;
+  el.className = "msg " + (type==="ok"?"okbox":type==="warn"?"warnbox":"errbox");
+  el.style.display = text ? "block" : "none";
+}
 async function GET(url){ const r=await fetch(url); if(!r.ok) throw new Error("HTTP "+r.status); return r.json(); }
 async function sheetSearch(sheet, params){
   const usp = new URLSearchParams(params);
@@ -68,8 +83,18 @@ async function sheetPatchBy(sheet, column, value, data){
   });
   if(!r.ok) throw new Error(await r.text()); return r.json();
 }
+function maskCPF(cpf){
+  const d = onlyDigits(cpf||"");
+  if(d.length!==11) return cpf||"";
+  return `${d.slice(0,3)}.${d.slice(3,6)}.${d.slice(6,9)}-${d.slice(9)}`;
+}
+function fmtDateISO(iso){
+  if(!iso) return "";
+  const [y,m,d] = iso.split("-"); if(!y||!m||!d) return iso;
+  return `${d}/${m}/${y}`;
+}
 
-// ======== ITENS/OPÇÕES ========
+/* ===== ITENS/OPÇÕES ===== */
 const ITEMS = [
   "Dormência ou formigamento.","Sensação de calor.","Tremores nas pernas.","Incapaz de relaxar.",
   "Medo que aconteça o pior.","Atordoado ou tonto.","Palpitação ou aceleração do coração.","Sem equilíbrio.",
@@ -89,8 +114,6 @@ function categoria(total){
   if(total <= 30) return "moderada";
   return "severa";
 }
-
-// ======== RENDER ========
 function renderQuestions(){
   const host = $("#qs"); host.innerHTML="";
   ITEMS.forEach((text, idx)=>{
@@ -108,79 +131,80 @@ function renderQuestions(){
     wrap.appendChild(opts); host.appendChild(wrap);
   });
 }
-renderQuestions();
 
-// ======== LOGIN VIA TOKEN ========
+/* ===== ESTADO ===== */
 let TOKEN = "";
-let CPF   = "";
-let PATIENT = null;
+let PAT = null;  // linha do Patients
+let CPF = "";    // do token
+let sending = false;
 
+/* ===== BOOT POR TOKEN ===== */
 (async function boot(){
   try{
     TOKEN = qs("token");
-    if(!TOKEN){ setMsg("Link inválido: token ausente. Solicite um novo link ao consultório.", false); disableForm(); return; }
+    if(!TOKEN){ setBox($("#alert"), "Link inválido (sem token). Solicite um novo link ao consultório.", "err"); return; }
 
-    // 1) token → cpf (e valida expiração/disabled)
+    // 1) token -> cpf (e checa validade)
     const trows = await sheetSearch(SHEETS.TOKENS, { token: TOKEN });
-    if(!trows || !trows.length) throw new Error("Token inválido ou não encontrado.");
+    if(!trows.length) throw new Error("Token inválido ou expirado.");
     const t = trows[0];
     const disabled = String(t.disabled||"não").toLowerCase()==="sim";
-    const expired  = t.expires_at && (new Date(t.expires_at) < new Date());
-    if(disabled || expired) throw new Error("Token expirado ou desativado.");
-
-    CPF = (t.cpf||"").replace(/\D+/g,"");
+    const expired = t.expires_at && (new Date(t.expires_at) < new Date());
+    if(disabled || expired) throw new Error("Token desativado/expirado. Peça um novo link.");
+    CPF = onlyDigits(t.cpf||"");
     if(!CPF) throw new Error("Token sem CPF vinculado.");
 
     // 2) carrega paciente
     const prows = await sheetSearch(SHEETS.PATIENTS, { cpf: CPF });
-    if(!prows || !prows.length) throw new Error("Paciente não encontrado. Contate o consultório.");
-    PATIENT = prows[0];
+    if(!prows.length) throw new Error("Paciente não encontrado.");
+    PAT = prows[0];
 
-    // 3) checa se BAI está liberado p/ este CPF
-    const allowed = String(PATIENT[CODE]||"").toLowerCase()==="sim";
-    if(!allowed){ setMsg("Este teste não foi liberado para você. Fale com o consultório.", false); disableForm(); return; }
+    // 3) checa se BAI está liberado
+    const liberado = String(PAT[CODE]||"").toLowerCase()==="sim";
+    if(!liberado){ throw new Error("Este teste não está liberado para você. Fale com a clínica."); }
 
-    // 4) bloqueio se já fez
-    const doneFlag = String(PATIENT[`${CODE}_FEITO`]||"").toLowerCase()==="sim";
-    const already = await sheetSearch(SHEETS.SCORES, { cpf: CPF, code: CODE });
-    if(doneFlag || (already && already.length)){
-      setMsg("Você já enviou este formulário. Redirecionando…", true);
-      setTimeout(()=>{ window.location.href = REDIRECT_URL; }, 1200);
+    // 4) bloqueio se já enviado (flag FEITO OU registro em Scores)
+    const feitoFlag = String(PAT[`${CODE}_FEITO`]||"").toLowerCase()==="sim";
+    const byToken = await sheetSearch(SHEETS.SCORES, { token: TOKEN, code: CODE }).catch(()=>[]);
+    const byCpf   = await sheetSearch(SHEETS.SCORES, { cpf: CPF, code: CODE }).catch(()=>[]);
+    if(feitoFlag || (byToken && byToken.length) || (byCpf && byCpf.length)){
+      setBox($("#alert"), "Você já preencheu este formulário. Redirecionando…", "ok");
+      setTimeout(()=>{ window.location.href = PORTAL_URL; }, 1200);
       return;
     }
 
-    // ok, liberado
-    setMsg("Tudo certo, pode preencher!", true);
-    setTimeout(()=>{ $("#msg").style.display="none"; }, 800);
-  }catch(e){
-    console.error(e);
-    setMsg(e.message || "Falha ao validar o link. Tente novamente.", false);
-    disableForm();
+    // 5) mostra dados do paciente
+    const info = $("#info"); info.style.display="grid";
+    info.innerHTML = `
+      <div class="info-item"><b>Nome</b><div>${PAT.nome||"-"}</div></div>
+      <div class="info-item"><b>CPF</b><div>${maskCPF(PAT.cpf)}</div></div>
+      <div class="info-item"><b>Nascimento</b><div>${fmtDateISO(PAT.data_nascimento)}</div></div>
+    `;
+
+    // 6) mostra o formulário
+    renderQuestions();
+    $("#form").style.display = "block";
+    setBox($("#alert"), "Identificação confirmada. Preencha todas as questões.", "ok");
+    setTimeout(()=> setBox($("#alert"), "", "ok"), 1000);
+  }catch(err){
+    console.error(err);
+    setBox($("#alert"), err.message || "Falha ao carregar. Tente novamente mais tarde.", "err");
   }
 })();
 
-function disableForm(){
-  document.querySelectorAll("input,button,select").forEach(el=>{
-    if(el.id!=="btnSubmit") el.disabled = true;
-  });
-  $("#btnSubmit").disabled = true;
-}
-
-// ======== SUBMIT (anti duplo clique) ========
-let sending = false;
-
+/* ===== SUBMIT (trava anti-duplo) ===== */
 $("#form").addEventListener("submit", async (e)=>{
   e.preventDefault();
   if(sending) return;
   sending = true;
   const btn = $("#btnSubmit");
+  const msg = $("#msg");
   btn.disabled = true;
-  const originalText = btn.textContent;
+  const original = btn.textContent;
   btn.textContent = "Enviando…";
 
   try{
-    // sanity: precisa ter token + cpf + patient carregado
-    if(!TOKEN || !CPF || !PATIENT) throw new Error("Sessão inválida. Reabra o link do formulário.");
+    if(!TOKEN || !PAT || !CPF){ throw new Error("Sessão inválida. Reabra o link recebido."); }
 
     // coleta pontuação total
     let total = 0;
@@ -192,9 +216,9 @@ $("#form").addEventListener("submit", async (e)=>{
     }
     const cat = categoria(total);
 
-    // salva APENAS total + categoria (com token)
+    // salva apenas total + categoria
     await sheetCreate(SHEETS.SCORES, {
-      result_id: `${CPF}_${CODE}_${Date.now()}`,
+      result_id: `${TOKEN}_${CODE}_${Date.now()}`,
       token: TOKEN,
       cpf: CPF,
       code: CODE,
@@ -207,17 +231,15 @@ $("#form").addEventListener("submit", async (e)=>{
     // marca FEITO
     await sheetPatchBy(SHEETS.PATIENTS, "cpf", CPF, { [`${CODE}_FEITO`]: "sim" });
 
-    // ok + redireciona
-    setMsg("formulário preenchido. respostas enviadas", true);
-    setTimeout(()=>{ window.location.href = REDIRECT_URL; }, 1200);
+    setBox(msg, "Formulário preenchido. respostas enviadas.", "ok");
+    setTimeout(()=>{ window.location.href = PORTAL_URL; }, 1200);
 
   }catch(err){
     console.error(err);
-    setMsg(err.message || "Falha ao enviar. Tente novamente.", false);
+    setBox(msg, err.message || "Falha ao enviar. Tente novamente.", "err");
     sending = false;
     btn.disabled = false;
-    btn.textContent = originalText;
-    return;
+    btn.textContent = original;
   }
 });
 </script>
