--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   .msg{margin:10px 0;padding:10px;border-radius:8px}
   .okbox{background:#052e1a;border:1px solid #114d2a;color:#b3f7c1}
   .errbox{background:#3b0d0d;border:1px solid #5b1919;color:#ffd0d0}
-  .warnbox{background:#3a2903;border:1px solid #5c4307;color:#ffe6b0}
+  .warnbox{background:#3a2903;border:1px solid #5b4307;color:#ffe6b0}
 </style>
 </head>
 <body>
@@ -63,13 +63,19 @@ const PORTAL_URL = "https://integradaneuropsicologia.github.io/formularios/";
 const $ = s => document.querySelector(s);
 const onlyDigits = s => (s||"").replace(/\D+/g,"");
 const qs = k => new URLSearchParams(location.search).get(k) || "";
+
 function setBox(id, text, kind="ok"){
   const el = $(id); if(!el) return;
   el.textContent = text;
   el.className = "msg " + (kind==="ok"?"okbox":kind==="warn"?"warnbox":"errbox");
   el.style.display = "block";
 }
-function hideBox(id){ const el=$(id); if(el){ el.style.display="none"; el.textContent=""; } }
+function hideBox(id){
+  const el=$(id); if(el){
+    el.style.display="none";
+    el.textContent="";
+  }
+}
 function maskCPF(cpf){
   const d = onlyDigits(cpf||"");
   if(d.length!==11) return cpf||"";
@@ -77,25 +83,37 @@ function maskCPF(cpf){
 }
 function fmtDateISO(iso){
   if(!iso) return "";
-  const [y,m,d] = iso.split("-"); if(!y||!m||!d) return iso;
+  const [y,m,d] = iso.split("-");
+  if(!y||!m||!d) return iso;
   return `${d}/${m}/${y}`;
 }
-async function GET(url){ const r=await fetch(url); if(!r.ok) throw new Error("HTTP "+r.status); return r.json(); }
+
+async function GET(url){
+  const r=await fetch(url);
+  if(!r.ok) throw new Error("HTTP "+r.status);
+  return r.json();
+}
 async function sheetSearch(sheet, params){
   const usp = new URLSearchParams(params);
   return GET(`${SHEETDB_BASE}/search?sheet=${encodeURIComponent(sheet)}&${usp.toString()}`);
 }
 async function sheetCreate(sheet, row){
   const r = await fetch(`${SHEETDB_BASE}?sheet=${encodeURIComponent(sheet)}`, {
-    method:"POST", headers:{ "Content-Type":"application/json" }, body: JSON.stringify({ data:[row] })
+    method:"POST",
+    headers:{ "Content-Type":"application/json" },
+    body: JSON.stringify({ data:[row] })
   });
-  if(!r.ok) throw new Error(await r.text()); return r.json();
+  if(!r.ok) throw new Error(await r.text());
+  return r.json();
 }
 async function sheetPatchBy(sheet, column, value, data){
   const r = await fetch(`${SHEETDB_BASE}/${encodeURIComponent(column)}/${encodeURIComponent(value)}?sheet=${encodeURIComponent(sheet)}`, {
-    method:"PATCH", headers:{ "Content-Type":"application/json" }, body: JSON.stringify({ data })
+    method:"PATCH",
+    headers:{ "Content-Type":"application/json" },
+    body: JSON.stringify({ data })
   });
-  if(!r.ok) throw new Error(await r.text()); return r.json();
+  if(!r.ok) throw new Error(await r.text());
+  return r.json();
 }
 
 // voltar ao portal com o mesmo token
@@ -113,24 +131,44 @@ function goPortalWithToken(){
 
 // ======== ITENS/OPÇÕES ========
 const ITEMS = [
-  "Dormência ou formigamento.","Sensação de calor.","Tremores nas pernas.","Incapaz de relaxar.",
-  "Medo que aconteça o pior.","Atordoado ou tonto.","Palpitação ou aceleração do coração.","Sem equilíbrio.",
-  "Aterrorizado.","Nervoso.","Sensação de sufocação.","Tremores nas mãos.","Trêmulo.",
-  "Medo de perder o controle.","Dificuldade de respirar.","Medo de morrer.","Assustado.",
-  "Indigestão ou desconforto no abdômen.","Sensação de desmaio.","Rosto afogueado.","Suor (não devido ao calor)."
+  "Dormência ou formigamento.",
+  "Sensação de calor.",
+  "Tremores nas pernas.",
+  "Incapaz de relaxar.",
+  "Medo que aconteça o pior.",
+  "Atordoado ou tonto.",
+  "Palpitação ou aceleração do coração.",
+  "Sem equilíbrio.",
+  "Aterrorizado.",
+  "Nervoso.",
+  "Sensação de sufocação.",
+  "Tremores nas mãos.",
+  "Trêmulo.",
+  "Medo de perder o controle.",
+  "Dificuldade de respirar.",
+  "Medo de morrer.",
+  "Assustado.",
+  "Indigestão ou desconforto no abdômen.",
+  "Sensação de desmaio.",
+  "Rosto afogueado.",
+  "Suor (não devido ao calor)."
 ];
+
 const CHOICES = [
   {label:"Absolutamente não", value:0},
   {label:"Levemente",         value:1},
   {label:"Moderadamente",     value:2},
   {label:"Gravemente",        value:3},
 ];
+
+// categorização clínica padrão
 function categoria(total){
   if(total <= 10) return "mínimo";
   if(total <= 19) return "leve";
   if(total <= 30) return "moderada";
   return "severa";
 }
+
 function renderQuestions(){
   const host = $("#qs"); host.innerHTML="";
   ITEMS.forEach((text, idx)=>{
@@ -138,32 +176,44 @@ function renderQuestions(){
     const wrap = document.createElement("div");
     wrap.className="q";
     wrap.innerHTML = `<h3>${idx+1}. ${text}</h3>`;
-    const opts = document.createElement("div"); opts.className="opts";
+
+    const opts = document.createElement("div");
+    opts.className="opts";
+
     CHOICES.forEach(c=>{
       const id=`q${qn}_${c.value}`;
       const lab=document.createElement("label"); lab.className="opt";
-      lab.innerHTML = `<input type="radio" name="q${qn}" id="${id}" value="${c.value}" required><span>${c.label}</span>`;
+      lab.innerHTML = `
+        <input type="radio" name="q${qn}" id="${id}" value="${c.value}" required>
+        <span>${c.label}</span>
+      `;
       opts.appendChild(lab);
     });
-    wrap.appendChild(opts); host.appendChild(wrap);
+
+    wrap.appendChild(opts);
+    host.appendChild(wrap);
   });
 }
 
 // ======== ESTADO ========
 let patient = null;     // linha de Patients
-let tokenRow = null;    // linha de LinkTokens (opcional de uso)
+let tokenRow = null;    // linha de LinkTokens
 let CPF = "";           // do token
 
 // ======== BOOT POR TOKEN ========
 (async function boot(){
   try{
     const TOKEN = qs("token");
-    if(!TOKEN){ setBox("#alert","Link inválido (sem token). Solicite um novo link.","err"); return; }
+    if(!TOKEN){
+      setBox("#alert","Link inválido (sem token). Solicite um novo link.","err");
+      return;
+    }
 
     // 1) valida token
     const trows = await sheetSearch(SHEETS.TOKENS, { token: TOKEN });
     if(!trows || !trows.length) throw new Error("Token inválido ou expirado.");
     tokenRow = trows[0];
+
     const disabled = String(tokenRow.disabled||"não").toLowerCase()==="sim";
     const expired  = tokenRow.expires_at && (new Date(tokenRow.expires_at) < new Date());
     if(disabled || expired) throw new Error("Token desativado/expirado. Peça um novo link.");
@@ -176,14 +226,14 @@ let CPF = "";           // do token
     if(!prows || !prows.length) throw new Error("Paciente não encontrado.");
     patient = prows[0];
 
-    // 3) verifica se o BAI está liberado para este paciente
+    // 3) verifica liberação
     const allowed = String(patient[CODE]||"").toLowerCase()==="sim";
     if(!allowed){
       setBox("#alert","Este formulário não está liberado para você. Entre em contato com o consultório.","err");
       return;
     }
 
-    // 4) bloqueia se já fez (flag na Patients ou Score existente)
+    // 4) bloqueia se já fez
     const flagDone = String(patient[`${CODE}_FEITO`]||"").toLowerCase()==="sim";
     const already = await sheetSearch(SHEETS.SCORES, { cpf: CPF, code: CODE });
     if(flagDone || (already && already.length)){
@@ -192,7 +242,7 @@ let CPF = "";           // do token
       return;
     }
 
-    // 5) render dados do paciente + perguntas
+    // 5) render dados + perguntas
     renderPatientInfo();
     renderQuestions();
     $("#pacInfo").style.display = "grid";
@@ -233,22 +283,34 @@ $("#form").addEventListener("submit", async (e)=>{
 
   const btn = $("#btnSubmit");
   const originalText = btn.textContent;
-  btn.disabled = true; btn.textContent = "Enviando…";
+  btn.disabled = true;
+  btn.textContent = "Enviando…";
 
   try{
     if(!patient) throw new Error("Sessão inválida. Recarregue o link.");
 
-    // coleta pontuação total
+    // coleta respostas e soma total
     let total = 0;
-    for(let i=1;i<=21;i++){
+    const qaList = []; // vamos salvar em 'questions'
+    for(let i=1;i<=ITEMS.length;i++){
       const qn = String(i).padStart(2,"0");
       const sel = document.querySelector(`input[name="q${qn}"]:checked`);
-      if(!sel){ throw new Error(`Responda a questão ${i}.`); }
-      total += Number(sel.value);
+      if(!sel){
+        throw new Error(`Responda a questão ${i}.`);
+      }
+      const rawVal = Number(sel.value); // 0..3
+      total += rawVal;
+      qaList.push({
+        n: i,
+        q: ITEMS[i-1],            // texto da pergunta (ex: "1. Dormência ou formigamento.")
+        raw: rawVal,
+        label: CHOICES.find(o=>o.value===rawVal)?.label || ""
+      });
     }
-    const cat = categoria(total);
 
-    // salva score (apenas total + categoria)
+    const cat = categoria(total); // mínimo/leve/moderada/severa
+
+    // salva score completo (incluindo questions)
     await sheetCreate(SHEETS.SCORES, {
       result_id: `${patient.cpf}_${CODE}_${Date.now()}`,
       token: qs("token"),
@@ -257,11 +319,16 @@ $("#form").addEventListener("submit", async (e)=>{
       source: "paciente",
       submitted_at: new Date().toISOString(),
       total,
-      categoria: cat
+      categoria: cat,
+      metrics: "",
+      questions: JSON.stringify(qaList), // <-- perguntas + respostas marcadas
+      
     });
 
     // marca como FEITO
-    await sheetPatchBy(SHEETS.PATIENTS, "cpf", patient.cpf, { [`${CODE}_FEITO`]: "sim" });
+    await sheetPatchBy(SHEETS.PATIENTS, "cpf", patient.cpf, {
+      [`${CODE}_FEITO`]: "sim"
+    });
 
     setBox("#msg","Formulário enviado. Voltando ao portal…","ok");
     setTimeout(goPortalWithToken, 1000);
@@ -270,7 +337,8 @@ $("#form").addEventListener("submit", async (e)=>{
     console.error(err);
     setBox("#msg", err.message || "Falha ao enviar. Tente novamente.", "err");
     sending = false;
-    btn.disabled = false; btn.textContent = originalText;
+    btn.disabled = false;
+    btn.textContent = originalText;
   }
 });
 </script>
