--- a/index.html
+++ b/index.html
@@ -5,35 +5,184 @@
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>BAI – Inventário de Ansiedade de Beck</title>
 <style>
-  :root{--bg:#0f172a;--card:#111827;--line:#1f2937;--text:#e5e7eb;--muted:#94a3b8;--pri:#4f46e5;--ok:#22c55e;--err:#ef4444}
+  :root{
+    /* TEMA CLARO (padrão) */
+    --bg:#f3f4f6;
+    --card:#ffffff;
+    --line:#e5e7eb;
+    --text:#0f172a;
+    --muted:#6b7280;
+    --pri:#4f46e5;
+    --ok:#16a34a;
+    --err:#b91c1c;
+    --surface:#f9fafb;
+    --chip:#eef2ff;
+    --ok-bg:#ecfdf3;
+    --ok-border:#bbf7d0;
+    --ok-text:#166534;
+    --err-bg:#fef2f2;
+    --err-border:#fecaca;
+    --err-text:#7f1d1d;
+    --warn-bg:#fffbeb;
+    --warn-border:#fef3c7;
+    --warn-text:#92400e;
+  }
+
+  /* TEMA ESCURO */
+  [data-theme="dark"]{
+    --bg:#0f172a;
+    --card:#111827;
+    --line:#1f2937;
+    --text:#e5e7eb;
+    --muted:#94a3b8;
+    --pri:#4f46e5;
+    --ok:#22c55e;
+    --err:#ef4444;
+    --surface:#0b1220;
+    --chip:#020617;
+    --ok-bg:#052e1a;
+    --ok-border:#114d2a;
+    --ok-text:#b3f7c1;
+    --err-bg:#3b0d0d;
+    --err-border:#5b1919;
+    --err-text:#ffd0d0;
+    --warn-bg:#3a2903;
+    --warn-border:#5b4307;
+    --warn-text:#ffe6b0;
+  }
+
   *{box-sizing:border-box}
-  body{margin:0;background:var(--bg);color:var(--text);font:16px/1.45 system-ui,-apple-system,Segoe UI,Roboto}
+  body{
+    margin:0;
+    background:var(--bg);
+    color:var(--text);
+    font:16px/1.45 system-ui,-apple-system,Segoe UI,Roboto;
+    -webkit-font-smoothing:antialiased;
+    -moz-osx-font-smoothing:grayscale;
+    transition:background .2s ease,color .2s ease;
+  }
   .wrap{max-width:960px;margin:24px auto;padding:0 16px}
-  .card{background:var(--card);border:1px solid var(--line);border-radius:14px;padding:18px}
+  .card{
+    background:var(--card);
+    border:1px solid var(--line);
+    border-radius:14px;
+    padding:18px;
+    box-shadow:0 18px 40px rgba(15,23,42,.15);
+  }
+
+  .header{
+    display:flex;
+    align-items:flex-start;
+    justify-content:space-between;
+    gap:12px;
+    margin-bottom:6px;
+  }
+  .header-main{flex:1 1 auto}
   h1{margin:0 0 6px;font-size:1.35rem}
-  .muted{color:var(--muted)}
+  .muted{color:var(--muted);margin:0}
+  @media(max-width:600px){
+    .header{flex-direction:column-reverse;align-items:flex-start}
+  }
+
+  .theme-btn{
+    align-self:flex-start;
+    padding:8px 12px;
+    border-radius:999px;
+    border:1px solid var(--line);
+    background:transparent;
+    color:var(--text);
+    font-size:.85rem;
+    cursor:pointer;
+    display:inline-flex;
+    align-items:center;
+    gap:6px;
+    white-space:nowrap;
+  }
+  .theme-btn:hover{background:var(--surface)}
+
   .grid-info{display:grid;grid-template-columns:1fr 1fr;gap:10px;margin:12px 0 6px}
   @media(max-width:720px){.grid-info{grid-template-columns:1fr}}
-  .info{background:#0b1220;border:1px solid var(--line);border-radius:10px;padding:10px}
-  .info b{display:block;margin-bottom:4px;color:#cbd5e1}
-  .q{border:1px solid var(--line);border-radius:12px;padding:12px;background:#0b1220}
+
+  .info{
+    background:var(--surface);
+    border:1px solid var(--line);
+    border-radius:10px;
+    padding:10px;
+  }
+  .info b{
+    display:block;
+    margin-bottom:4px;
+    color:var(--muted);
+    font-size:.8rem;
+    text-transform:uppercase;
+    letter-spacing:.03em;
+  }
+
+  .q{
+    border:1px solid var(--line);
+    border-radius:12px;
+    padding:12px;
+    background:var(--surface);
+    margin-bottom:10px;
+  }
   .q h3{margin:0 0 8px;font-size:1rem}
+
   .opts{display:flex;flex-wrap:wrap;gap:10px}
-  .opt{display:flex;align-items:center;gap:6px;padding:8px 10px;border:1px solid var(--line);border-radius:10px}
-  .btn{display:inline-flex;align-items:center;gap:8px;background:var(--pri);border:none;color:#fff;padding:10px 14px;border-radius:10px;cursor:pointer}
+  .opt{
+    display:flex;
+    align-items:center;
+    gap:6px;
+    padding:8px 10px;
+    border:1px solid var(--line);
+    border-radius:10px;
+    background:var(--chip);
+    font-size:.9rem;
+  }
+  .opt input{margin:0}
+
+  .btn{
+    display:inline-flex;
+    align-items:center;
+    gap:8px;
+    background:var(--pri);
+    border:none;
+    color:#fff;
+    padding:10px 14px;
+    border-radius:10px;
+    cursor:pointer;
+    font-weight:500;
+  }
   .btn.ok{background:var(--ok)}
   .btn:disabled{opacity:.6;cursor:not-allowed}
-  .msg{margin:10px 0;padding:10px;border-radius:8px}
-  .okbox{background:#052e1a;border:1px solid #114d2a;color:#b3f7c1}
-  .errbox{background:#3b0d0d;border:1px solid #5b1919;color:#ffd0d0}
-  .warnbox{background:#3a2903;border:1px solid #5b4307;color:#ffe6b0}
+
+  .msg{margin:10px 0;padding:10px;border-radius:8px;font-size:.9rem}
+  .okbox{
+    background:var(--ok-bg);
+    border:1px solid var(--ok-border);
+    color:var(--ok-text);
+  }
+  .errbox{
+    background:var(--err-bg);
+    border:1px solid var(--err-border);
+    color:var(--err-text);
+  }
+  .warnbox{
+    background:var(--warn-bg);
+    border:1px solid var(--warn-border);
+    color:var(--warn-text);
+  }
 </style>
 </head>
 <body>
 <div class="wrap">
   <div class="card">
-    <h1>BAI – Inventário de Ansiedade de Beck</h1>
-    <p class="muted">Marque o quanto cada sintoma lhe incomodou na <strong>última semana</strong>, incluindo hoje.</p>
+    <div class="header">
+      <div class="header-main">
+        <h1>BAI – Inventário de Ansiedade de Beck</h1>
+        <p class="muted">Marque o quanto cada sintoma lhe incomodou na <strong>última semana</strong>, incluindo hoje.</p>
+      </div>
+      <button id="themeToggle" class="theme-btn" type="button">🌙 Modo escuro</button>
+    </div>
 
     <!-- Dados do paciente (preenchidos via token) -->
     <div id="pacInfo" class="grid-info" style="display:none;"></div>
@@ -63,6 +212,43 @@ const PORTAL_URL = "https://integradaneuropsicologia.github.io/formularios/";
 const $ = s => document.querySelector(s);
 const onlyDigits = s => (s||"").replace(/\D+/g,"");
 const qs = k => new URLSearchParams(location.search).get(k) || "";
+
+// ======== TEMA CLARO/ESCURO ========
+const THEME_KEY = "bai_theme";
+
+function applyTheme(theme){
+  const root = document.documentElement;
+  root.setAttribute("data-theme", theme);
+  const btn = $("#themeToggle");
+  if(btn){
+    btn.textContent = theme === "dark" ? "☀️ Modo claro" : "🌙 Modo escuro";
+  }
+}
+
+function initTheme(){
+  let theme = "light";
+  try{
+    const saved = localStorage.getItem(THEME_KEY);
+    if(saved === "dark" || saved === "light") theme = saved;
+  }catch(_){}
+  applyTheme(theme);
+
+  const btn = $("#themeToggle");
+  if(btn){
+    btn.addEventListener("click", ()=>{
+      const current = document.documentElement.getAttribute("data-theme") || "light";
+      const next = current === "dark" ? "light" : "dark";
+      applyTheme(next);
+      try{ localStorage.setItem(THEME_KEY, next); }catch(_){}
+    });
+  }
+}
+
+if(document.readyState === "loading"){
+  document.addEventListener("DOMContentLoaded", initTheme);
+}else{
+  initTheme();
+}
 
 function setBox(id, text, kind="ok"){
   const el = $(id); if(!el) return;
@@ -291,26 +477,26 @@ $("#form").addEventListener("submit", async (e)=>{
 
     // coleta respostas e soma total
     let total = 0;
-    const qaList = []; // vamos salvar em 'questions'
-    for(let i=1;i<=ITEMS.length;i++){
-      const qn = String(i).padStart(2,"0");
-      const sel = document.querySelector(`input[name="q${qn}"]:checked`);
-      if(!sel){
-        throw new Error(`Responda a questão ${i}.`);
-      }
-      const rawVal = Number(sel.value); // 0..3
-      total += rawVal;
-      qaList.push({
-        n: i,
-        q: ITEMS[i-1],            // texto da pergunta (ex: "1. Dormência ou formigamento.")
-        raw: rawVal,
-        label: CHOICES.find(o=>o.value===rawVal)?.label || ""
-      });
-    }
+  const qaList = []; // será salvo em 'questions' no formato { "Pergunta": "Resposta" }
+for(let i=1;i<=ITEMS.length;i++){
+  const qn = String(i).padStart(2,"0");
+  const sel = document.querySelector(`input[name="q${qn}"]:checked`);
+  if(!sel){
+    throw new Error(`Responda a questão ${i}.`);
+  }
+  const rawVal = Number(sel.value); // 0..3
+  total += rawVal;
+
+  const choice = CHOICES.find(o=>o.value===rawVal);
+  const obj = {};
+  obj[ITEMS[i-1]] = choice ? choice.label : String(rawVal);
+  qaList.push(obj);
+}
+
 
     const cat = categoria(total); // mínimo/leve/moderada/severa
 
-    // salva score completo (incluindo questions)
+    // salva score completo (questions = só perguntas + respostas)
     await sheetCreate(SHEETS.SCORES, {
       result_id: `${patient.cpf}_${CODE}_${Date.now()}`,
       token: qs("token"),
@@ -321,8 +507,7 @@ $("#form").addEventListener("submit", async (e)=>{
       total,
       categoria: cat,
       metrics: "",
-      questions: JSON.stringify(qaList), // <-- perguntas + respostas marcadas
-      
+      questions: JSON.stringify(qaList)
     });
 
     // marca como FEITO
